fix: ajustar propiedades de overflow en styles.css para mejorar la visualización en pantallas pequeñas

--- a/apps/landing/src/styles/styles.css
+++ b/apps/landing/src/styles/styles.css
@@ -5,12 +5,12 @@
 
 @media (max-width: 768px) {
   * {
-    overflow-x: hidden;
-    overflow-y: visible;
+    overflow-x: initial;
+    overflow-y: initial;
   }
 }
 
-body{
+body {
   background-color: var(--color-secondary);
   overflow: hidden;
   height: 100vh;
@@ -25,4 +25,3 @@ body{
     width: 100%;
   }
 }
-
